--- a/styles/bar-chart.css
+++ b/styles/bar-chart.css
@@ -5,18 +5,21 @@
     font-family: sans-serif;
 }
 
-.show-on-hover {
+.bar-chart__bar-value {
     position: absolute;
-    top: 0.2rem;
-    left: 0.2rem;
-    display: none;
-    padding: 1rem;
-    font-size: .75rem;
-    box-shadow: 1px 1px 2px var(--dark-grey);
-    background-color: rgba(255, 255, 255, .9);
-    border-radius: .1rem;
+    top: 0;
+    left: 0;
+    padding: .2rem;
+    border-top: 2px dashed var(--light-grey);
     white-space: nowrap;
     z-index: 1;
+    color: var(--light-grey);
+    background-color: rgba(0,0,0,.5);
+    display: none;
+}
+
+.bar-chart__bar-value--active {
+    display: block;
 }
 
 .bar-chart__figure {
@@ -36,9 +39,16 @@
 .bar-chart__container {
     display: grid;
     grid-auto-flow: column;
+    grid-auto-columns: minmax(4rem, auto);
     align-items: end;
     justify-content: start;
     overflow-x: scroll;
+}
+
+.bar-chart__bar-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .bar-chart__bar {
@@ -50,14 +60,19 @@
     position: relative;
     border-top-right-radius: .2rem;
     border-top-left-radius: .2rem;
-
+    order: 1;
 }
 
-.bar-chart__bar:hover > .show-on-hover {
-    display: block;
-}
+@media (prefers-reduced-motion: no-preference) {
+    .bar-chart__bar {
+        height: 0px;
+        transition: height 1s ease;
+      }
+  }
+
 
 .bar-chart__bar-label {
+    order: 2;
     text-align: center;
     padding: .5rem;
     display: block;
