--- a/styles/bar-chart.css
+++ b/styles/bar-chart.css
@@ -10,12 +10,13 @@
     top: 0;
     left: 0;
     padding: .2rem;
-    border-top: 2px dashed var(--light-grey);
     white-space: nowrap;
     z-index: 1;
-    color: var(--light-grey);
-    background-color: rgba(0,0,0,.5);
+    color: var(--dark-grey);
+    background-color: rgba(255,255,255,.8);
     display: none;
+    border-radius: .2rem .2rem .2rem 0;
+    box-shadow: 1px 1px 2px var(--dark-grey);
 }
 
 .bar-chart__bar-value--active {
@@ -55,8 +56,6 @@
     display: block;
     margin: 0 auto;
     width: 2rem;
-    border: 1px solid var(--light-grey);
-    background-color: deeppink;
     position: relative;
     border-top-right-radius: .2rem;
     border-top-left-radius: .2rem;
