--- a/src/components/bar-chart/bar-chart.css
+++ b/src/components/bar-chart/bar-chart.css
@@ -2,6 +2,7 @@
     --light-grey: #efefef;
     --dark-grey: #555;
     --white: #fff;
+    all: initial;
     font-size: 16px;
     font-family: sans-serif;
 }
