--- a/src/components/bar-chart/bar-chart.css
+++ b/src/components/bar-chart/bar-chart.css
@@ -4,7 +4,11 @@
     --white: #fff;
     all: initial;
     font-size: 16px;
-    font-family: sans-serif;
+    font-family: 'Arial', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 .bar-chart__bar-value {
@@ -19,7 +23,6 @@
     border: 1px solid var(--light-grey);
     border-radius: .5rem;
     padding-top: 1rem;
-    min-width: 320px;
     margin: 1rem auto;
     background-color: var(--white);
 }
